<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_detail_product"
    android:paddingBottom="24dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/warnIconSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/warn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/success"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/changeConfirmationNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/changeConfirm"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/warnIconSave"
        app:layout_constraintStart_toStartOf="@+id/warnIconSave"
        app:layout_constraintTop_toBottomOf="@+id/warnIconSave" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/changeConfirmationNotifyDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/changeConfirmDesc"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/warnIconSave"
        app:layout_constraintStart_toStartOf="@+id/warnIconSave"
        app:layout_constraintTop_toBottomOf="@+id/changeConfirmationNotify" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveDataBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="53dp"
        android:backgroundTint="@color/button_colorbackground"
        android:fontFamily="@font/poppins_semibold"
        android:padding="16dp"
        android:text="@string/changeConfirmYes"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="9dp"
        app:iconGravity="start"
        app:iconPadding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeConfirmationNotifyDesc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelDataChanges"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="53dp"
        android:backgroundTint="#EC2929"
        android:fontFamily="@font/poppins_semibold"
        android:padding="16dp"
        android:text="@string/changeConfirmNo"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="9dp"
        app:iconGravity="start"
        app:iconPadding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveDataBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>